<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL_IO" Id="{dfee38cb-fde6-4a5a-88bf-6450b9c7dbfa}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// FRANKA OUTPUT Coils
	
	FRANKA_Marker0			:	REFERENCE TO BOOL;
	FRANKA_home1			:	REFERENCE TO BOOL;
	PCB_Marker2				: 	REFERENCE TO BOOL;
	FRANKA_MPoint_reached3	:	REFERENCE TO BOOL;
	FRANKA_Measurement_finished4: REFERENCE TO BOOL;
	FRANKA_PCB_Picked5		:	REFERENCE TO BOOL;
	FRANKA_PCB_Placed6		:	REFERENCE TO BOOL;
	FRANKA_ready_to_start	:	REFERENCE TO BOOL;

	// FRANKA INPUT Coils
	PLC_Measure_Finished0	: 	REFERENCE TO BOOL;
	PLC_confirm_PCB_placement1: 	REFERENCE TO BOOL;
	PLC_Start_trigger		:	REFERENCE TO BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>